--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -19,7 +19,8 @@ jobs:
         id: modules-to-deploy
         run: |
           # Get the list of changed files between the current commit and the previous commit
-          changed_files=$(git diff --name-only HEAD~1 HEAD)
+          changed_files=`git diff-tree --no-renames --no-commit-id --name-only -r "${GITHUB_SHA}^..HEAD"`
+          changed_files=`echo $changed_files| sed 's/ /,/g'` #replace space with comma
 
           # Define the list of module directories to check against
           modules=$(ls -d */ | sed 's#/##')  # Adjust this list to match your actual module directories
